--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,23 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-side {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
+.right-side {
+  display: flex;  
+  align-items: center;
+  justify-content: flex-end;
+  gap: 16px;
 }
 
 .profile-image {
@@ -45,4 +62,8 @@ a {
 
 ul {
   list-style-type: none;
+  margin: 0%;
+  padding: 0%;
+  display: flex;
+  gap: 8px;
 }
